--- a/docs/page.css
+++ b/docs/page.css
@@ -5,3 +5,11 @@ body {
   width: 100%; 
   height: 300px;
 }
+.art-request-marker {
+  background-image: url('img/paint-brush-fill.svg');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
