--- a/docs/page.css
+++ b/docs/page.css
@@ -1,9 +1,13 @@
-body {
+html {
   width: 100%;
+  height: 100%;
+}
+
+body {
   margin: 0;
-  font-family: Roboto Mono;
+  font-family: 'Roboto Mono', monospace;
   font-style: normal;
-  height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 * {
@@ -12,13 +16,16 @@ body {
 
 .themap {
   width: 100%; 
-  height: 300px;
+  height: 250px;
+}
+
+h1, h2, h3 {
+  font-weight: bold;
+  line-height: 33px;
 }
 
 h1 {
-  font-weight: bold;
   font-size: 28px;
-  line-height: 33px;
 }
 
 a {
@@ -30,10 +37,16 @@ main {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 1.5em;
+  padding: 0 1.5em;
 }
 
-
+.primary-btn {
+  background: #6209F2;
+  color: white;
+  border: none;
+  border-radius: 90px;
+  padding: 0.5em 1em;
+}
 /* location cards */
 .location-card {
   margin-bottom: 1em;
@@ -52,9 +65,19 @@ main {
   flex: 1;
 }
 
-/* .location-card .location-cta{
+.location-card .location-cta{
+  padding: 0.5em;
+  align-self: center;
+}
 
-} */
+.location-card .location-cta .serve-cta {
+  font-size: 1em;
+  line-height: 0.75em;
+}
+
+.location-card .location-cta .serve-cta .sub {
+  font-size: 0.5em;
+}
 
 .request-cta {
   font-weight: bold;
@@ -62,6 +85,7 @@ main {
   width: 100%;
   text-align: center;
   display: inline-block;
+  box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.45);
 }
 
 #request-type a {
@@ -73,7 +97,7 @@ main {
 /* dialogs */
 .dialog {
   display: none;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
@@ -92,7 +116,7 @@ main {
   background: white;
   padding: 1em;
   position: relative;
-  border-radius: 2px;
+  border-radius: 1em;
 }
 
 .dialog .dialog-content .close {
@@ -129,6 +153,7 @@ footer {
   padding: 0.5em;
   font-size: 10px;
 }
+
 .art-request-marker {
   background-image: url('img/paint-brush-fill.svg');
   background-size: cover;
