--- a/docs/css/page.css
+++ b/docs/css/page.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Roboto Mono', monospace;
   font-style: normal;
   min-height: -webkit-fill-available;
+  font-size: 1em;
 }
 
 * {
@@ -17,6 +18,10 @@ body {
 .themap {
   width: 100%; 
   height: 250px;
+}
+
+hr {
+  border-top: 1px solid #E5E5E5;
 }
 
 h1, h2, h3 {
@@ -94,6 +99,14 @@ main {
   padding: 1.5em;
 }
 
+.request-cleanup-cta {
+  color: #6209F2;
+}
+
+.request-art-cta {
+  color: #9C08B5;
+}
+
 /* dialogs */
 .dialog {
   display: none;
@@ -155,7 +168,7 @@ footer {
 }
 
 .art-request-marker {
-  background-image: url('img/paint-brush-fill.svg');
+  background-image: url('../img/paint-brush-fill.svg');
   background-size: cover;
   width: 50px;
   height: 50px;
