convert to svelte app

--- a/public/styles/icons.css
+++ b/public/styles/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot');
-  src:  url('../fonts/icomoon.eot') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf') format('truetype'),
-    url('../fonts/icomoon.woff') format('woff'),
-    url('../fonts/icomoon.svg#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?80c6xi');
+  src:  url('../fonts/icomoon.eot?80c6xi#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?80c6xi') format('truetype'),
+    url('../fonts/icomoon.woff?80c6xi') format('woff'),
+    url('../fonts/icomoon.svg?80c6xi#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,7 +13,7 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -26,6 +26,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close:before {
+  content: "\e90a";
+}
 .icon-service:before {
   content: "\e900";
 }
